tests/negative/parser/untagged_arity.orng
// untagged_arity.orng:5:35: error: built-in function takes 2 parameters, 0 arguments given
// type My_Untagged_Union = @Untagged()
//                                  ^
// 
type My_Untagged_Union = @Untagged()